--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,5 +9,16 @@ spring:
   password: root 
  jpa:
   hibernate:
-   ddl-auto: create
+   ddl-auto: update
+   
+management:
+  endpoints:
+    enabled-by-default: false
+  endpoint:
+    info:
+      enabled: true   
+    health:
+      enabled: true
+    
+    
    
