--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -15,3 +15,12 @@ spring:
       hibernate:
         format_sql: true        
     show-sql: true
+    
+management:
+  endpoints:
+    enabled-by-default: false
+  endpoint:
+    info:
+      enabled: true   
+    health:
+      enabled: true
