--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,6 +10,10 @@ spring:
  jpa:
   hibernate:
    ddl-auto: update
+ 
+ devtools:
+   livereload:
+    enabled: true
    
 management:
   endpoints:
